fixes alignment issue i mistakenly removed

--- a/src/App.css
+++ b/src/App.css
@@ -237,8 +237,8 @@ body {
     /* margin-top: 10px; */
     /* margin-right: 10px; */
     display: flex;
-    /* justify-content: center; */
-    /* align-items:center; */
+    justify-content: center;
+    align-items:center;
     border-radius: 50px;
     background-color: teal;
     border: 4px solid teal;
